--- a/python-test/app.yaml
+++ b/python-test/app.yaml
@@ -1,4 +1,4 @@
-application: Hello-world
+application: helloworld
 version: 1
 runtime: python27
 api_version: 1
@@ -6,4 +6,4 @@ threadsafe: true
 
 handlers:
 - url: .*
-  script: hello.app
+  script: helloworld.py
