--- a/python-test/app.yaml
+++ b/python-test/app.yaml
@@ -1,9 +1,9 @@
-application: python-test
+application: helloworld
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
 
 handlers:
-- url: .*
-  script: hello.app
+- url: /.*
+  script: helloworld.py
